[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "0.16"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
serde_json = "1.0"
sha2 = "0.10.6"

[dev-dependencies]
cw-multi-test = "0.16.0"
